# hudson-transit

./: .gitignore  2014.pqt  2016.pqt  2017.pqt  2020.pqt  2021.pqt  2022.pqt  Makefile  README.md  analyze-hourly.ipynb  extract.py  gsmo.yml  monthly.ipynb  months.ipynb  nj-ny-day-volumes.ipynb  nj-ny-day.json  nj-ny-day_pct.json  nj-ny-peak-2019-2023.json  nj-ny-peak.ipynb  nj-ny-peak.json  nj-ny-peak_pct.json  parse-hourly.ipynb  parse-traffic.ipynb  pyproject.toml  requirements.txt
.dvc/: config
2022/: DM_TDS_Hub_Bound_Travel_AppendixI_2022.xlsx
2024/: DM_TDS_Hub_Bound_Travel_AppendixIII_SectionA_2024.xlsx  DM_TDS_Hub_Bound_Travel_AppendixIII_SectionB_2024.xlsx  DM_TDS_Hub_Bound_Travel_AppendixIII_SectionC_2024.xlsx  DM_TDS_Hub_Bound_Travel_AppendixIII_SectionD_2024.xlsx  DM_TDS_Hub_Bound_Travel_AppendixIII_SectionE_2024.xlsx  DM_TDS_Hub_Bound_Travel_AppendixIII_SectionF_2024.xlsx  DM_TDS_Hub_Bound_Travel_AppendixIII_SectionG_2024.xlsx  DM_TDS_Hub_Bound_Travel_AppendixII_2024.xlsx  DM_TDS_Hub_Bound_Travel_AppendixI_2024.xlsx  DM_TDS_Hub_Bound_Travel_Quick Reference Table_2024.xlsx
data/: 2012.pqt  2013.pqt  2014.pqt  2015.pqt  2016.pqt  2017-hourly-total.pqt  2017.pqt  2018.pqt  2019.pqt  2020-hourly-system.pqt  2020-hourly-total.pqt  2020.pqt  2021-hourly-total.pqt  2021-hourly.pqt  2021.pqt  2022-hourly-system.pqt  2022-hourly-total.pqt  2022-hourly.pqt  2022.pqt  2023.pqt  all.pqt  all.xlsx  appendix_iii.json  appendix_iii.json.dvc  appendix_iii_detail.json.dvc  bus_passengers.json  bus_passengers.json.dvc  crossings.json  crossings.json.dvc  hourly.json  (+7 more)
(+220 files in other folders)
